--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 <nav id="navbar" class="navbar fixed w-full z-50 px-4 py-3 transition-all duration-300 bg-white">
   <div class="container mx-auto flex justify-between items-center">
     <a href="index.html" class="flex items-center">
-      <img src="images/safi-logo.png" loading="lazy" alt="SafiTechltd" class="h-10 w-auto"
+      <img src="images/safi-logo.png" alt="SafiTechltd" class="h-10 w-auto"
         onerror="this.style.display='none'; this.insertAdjacentHTML('afterend', '<span class=\'text-3xl font-[Pacifico] text-primary\'>SafiTechltd</span>');" />
     </a>
 
@@ -312,7 +312,7 @@
                 <!-- Gallery Item 1 -->
                 <div class="masonry-item gallery-item" data-category="residential interior">
                     <div class="relative rounded-lg overflow-hidden">
-                        <img src="images/interior-2.png" loading="lazy" alt="Modern Living Room" class="w-full">
+                        <img src="images/interior-2.png"  alt="Modern Living Room" class="w-full">
                         <div class="gallery-overlay absolute inset-0 bg-black/60 flex flex-col justify-end p-6 opacity-0 transition-opacity">
                             <h3 class="text-xl font-bold text-white mb-2">Modern Living Room</h3>
                             <p class="text-white/80 mb-4">Complete interior painting with custom color consultation for this contemporary space.</p>
@@ -327,7 +327,7 @@
                 <!-- Gallery Item 2 -->
                 <div class="masonry-item gallery-item" data-category="commercial interior">
                     <div class="relative rounded-lg overflow-hidden">
-			    <img src="images/interior-4.png" loading="lazy" alt="Corporate Office" class="w-full">
+			    <img src="images/interior-4.png"  alt="Corporate Office" class="w-full">
                         <div class="gallery-overlay absolute inset-0 bg-black/60 flex flex-col justify-end p-6 opacity-0 transition-opacity">
                             <h3 class="text-xl font-bold text-white mb-2">Corporate Office</h3>
                             <p class="text-white/80 mb-4">Complete repainting of this 5,000 sq ft office space with minimal business disruption.</p>
@@ -342,7 +342,7 @@
                 <!-- Gallery Item 3 -->
                 <div class="masonry-item gallery-item" data-category="residential exterior">
                     <div class="relative rounded-lg overflow-hidden">
-                        <img src="images/exterior-1.png" loading="lazy" alt="Colonial Home Exterior" class="w-full">
+                        <img src="images/exterior-1.png"  alt="Colonial Home Exterior" class="w-full">
                         <div class="gallery-overlay absolute inset-0 bg-black/60 flex flex-col justify-end p-6 opacity-0 transition-opacity">
                             <h3 class="text-xl font-bold text-white mb-2">Colonial Home Exterior</h3>
                             <p class="text-white/80 mb-4">Complete exterior repaint with color consultation and premium weather-resistant paint.</p>
@@ -357,7 +357,7 @@
                 <!-- Gallery Item 4 -->
                 <div class="masonry-item gallery-item" data-category="residential interior">
                     <div class="relative rounded-lg overflow-hidden">
-                        <img src="images/interior-3.png" loading="lazy" alt="Dining Room Accent Wall" class="w-full">
+                        <img src="images/interior-3.png"  alt="Dining Room Accent Wall" class="w-full">
                         <div class="gallery-overlay absolute inset-0 bg-black/60 flex flex-col justify-end p-6 opacity-0 transition-opacity">
                             <h3 class="text-xl font-bold text-white mb-2">Dining Room Accent Wall</h3>
                             <p class="text-white/80 mb-4">Custom accent wall with specialty finish to create a stunning focal point in this dining space.</p>
@@ -372,7 +372,7 @@
                 <!-- Gallery Item 5 -->
                 <div class="masonry-item gallery-item" data-category="commercial exterior">
                     <div class="relative rounded-lg overflow-hidden">
-                        <img src="images/exterior-2.png" loading="lazy" alt="Retail Storefront" class="w-full">
+                        <img src="images/exterior-2.png"  alt="Retail Storefront" class="w-full">
                         <div class="gallery-overlay absolute inset-0 bg-black/60 flex flex-col justify-end p-6 opacity-0 transition-opacity">
                             <h3 class="text-xl font-bold text-white mb-2">Retail Storefront</h3>
                             <p class="text-white/80 mb-4">Brand-aligned exterior painting for this retail location to enhance visibility and customer appeal.</p>
@@ -387,7 +387,7 @@
                 <!-- Gallery Item 6 -->
                 <div class="masonry-item gallery-item" data-category="residential interior">
                     <div class="relative rounded-lg overflow-hidden">
-                        <img src="images/interior-1.png" loading="lazy" alt="Kitchen Cabinet Refinishing" class="w-full">
+                        <img src="images/interior-1.png"  alt="Kitchen Cabinet Refinishing" class="w-full">
                         <div class="gallery-overlay absolute inset-0 bg-black/60 flex flex-col justify-end p-6 opacity-0 transition-opacity">
                             <h3 class="text-xl font-bold text-white mb-2">Kitchen Cabinet Refinishing</h3>
                             <p class="text-white/80 mb-4">Complete cabinet refinishing to transform this kitchen with a fresh, modern look without replacement.</p>
@@ -412,7 +412,7 @@
     <!-- Lightbox -->
     <div id="lightbox" class="lightbox">
         <div class="lightbox-content">
-            <img id="lightbox-image" src="" loading="lazy" alt="Project Image" class="max-w-full max-h-full">
+            <img id="lightbox-image" src=""  alt="Project Image" class="max-w-full max-h-full">
         </div>
         <button id="close-lightbox" class="absolute top-6 right-6 w-12 h-12 rounded-full bg-white/20 flex items-center justify-center text-white hover:bg-white/30 transition-colors">
             <i class="ri-close-line text-2xl"></i>
@@ -512,7 +512,7 @@
                         </div>
                     </div>
                     <div class="md:w-1/2">
-                        <img src="images/safi-1.png" loading="lazy" alt="Professional Painter" class="w-full h-full object-cover object-top">
+                        <img src="images/safi-1.png"  alt="Professional Painter" class="w-full h-full object-cover object-top">
                     </div>
                 </div>
             </div>
@@ -531,7 +531,7 @@
                 <!-- Blog Post 1 -->
                 <div class="bg-white rounded-lg overflow-hidden shadow-md">
                     <div class="h-48 overflow-hidden">
-                        <img src="https://readdy.ai/api/search-image?query=Interior%20design%20color%20palette%20samples%20and%20swatches%20arranged%20neatly%20on%20white%20surface.%20Professional%20color%20selection%20process%20for%20home%20interior.%20Various%20paint%20color%20options%20in%20blues%2C%20yellows%2C%20and%20warm%20tones.%20Modern%20color%20trends%20for%202025.&width=600&height=400&seq=12357&orientation=landscape" loading="lazy" alt="Color Trends" class="w-full h-full object-cover object-top">
+                        <img src="https://readdy.ai/api/search-image?query=Interior%20design%20color%20palette%20samples%20and%20swatches%20arranged%20neatly%20on%20white%20surface.%20Professional%20color%20selection%20process%20for%20home%20interior.%20Various%20paint%20color%20options%20in%20blues%2C%20yellows%2C%20and%20warm%20tones.%20Modern%20color%20trends%20for%202025.&width=600&height=400&seq=12357&orientation=landscape"  alt="Color Trends" class="w-full h-full object-cover object-top">
                     </div>
                     <div class="p-6">
                         <div class="flex items-center text-sm text-gray-500 mb-3">
@@ -554,7 +554,7 @@
                 <!-- Blog Post 2 -->
                 <div class="bg-white rounded-lg overflow-hidden shadow-md">
                     <div class="h-48 overflow-hidden">
-                        <img src="images/safi-2.png" loading="lazy" alt="Painting Tips" class="w-full h-full object-cover object-top">
+                        <img src="images/safi-2.png"  alt="Painting Tips" class="w-full h-full object-cover object-top">
                     </div>
                     <div class="p-6">
                         <div class="flex items-center text-sm text-gray-500 mb-3">
@@ -577,7 +577,7 @@
                 <!-- Blog Post 3 -->
                 <div class="bg-white rounded-lg overflow-hidden shadow-md">
                     <div class="h-48 overflow-hidden">
-                        <img src="https://readdy.ai/api/search-image?query=Living%20room%20before%20and%20after%20painting%20transformation.%20Split%20image%20showing%20dramatic%20improvement%20with%20new%20paint%20color.%20Modern%20interior%20design%20with%20fresh%20paint%20job%20transforming%20dated%20space%20into%20contemporary%20room.%20Professional%20results.&width=600&height=400&seq=12359&orientation=landscape" loading="lazy" alt="Room Transformation" class="w-full h-full object-cover object-top">
+                        <img src="https://readdy.ai/api/search-image?query=Living%20room%20before%20and%20after%20painting%20transformation.%20Split%20image%20showing%20dramatic%20improvement%20with%20new%20paint%20color.%20Modern%20interior%20design%20with%20fresh%20paint%20job%20transforming%20dated%20space%20into%20contemporary%20room.%20Professional%20results.&width=600&height=400&seq=12359&orientation=landscape"  alt="Room Transformation" class="w-full h-full object-cover object-top">
                     </div>
                     <div class="p-6">
                         <div class="flex items-center text-sm text-gray-500 mb-3">
@@ -748,7 +748,7 @@
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8 mb-12">
                 <div>
                     <a href="index.html" class="inline-block mb-4 flex items-center">
-  			<img src="images/safi-logo.png" loading="lazy" alt="SafiTech Ltd" class="h-10 w-auto" onerror="this.style.display='none'; this.insertAdjacentHTML('afterend', '<span class=\'text-3xl font-[Pacifico] text-primary\'>SafiTech Ltd</span>');" />
+  			<img src="images/safi-logo.png"  alt="SafiTech Ltd" class="h-10 w-auto" onerror="this.style.display='none'; this.insertAdjacentHTML('afterend', '<span class=\'text-3xl font-[Pacifico] text-primary\'>SafiTech Ltd</span>');" />
 			</a>
                     <p class="text-gray-400 mb-6">Premium paint products and professional painting services for residential and commercial clients.</p>
                     <div class="flex space-x-4">
